storybook/src/_styles/overrides.css
/**
 * @license EUPL-1.2+
 * Copyright Gemeente Amsterdam
 */

/* stylelint-disable no-descending-specificity, selector-class-pattern, selector-max-id */

.sbdocs-wrapper.sbdocs-wrapper {
  padding-inline: 8vw;
}

.sbdocs-content.sbdocs-content > :is(h1, h2, h3, h4, h5, h6, p),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(h1, h2, h3, h4, h5, h6, p),
.sbdocs-content.sbdocs-content > :is(ol, ul) li,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(ol, ul) li,
.sbdocs-content.sbdocs-content > table:not(.sb-unstyled) :is(td, th),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > table:not(.sb-unstyled) :is(td, th),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > figure > figcaption {
  color: var(--ams-color-text);
  font-family: "Amsterdam Sans", "Arial", sans-serif;
}

.sbdocs-content.sbdocs-content > p,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > p,
.sbdocs-content.sbdocs-content > blockquote > p,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > blockquote > p,
.sbdocs-content.sbdocs-content > :is(ol, ul) li,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(ol, ul) li,
.sbdocs-content.sbdocs-content > :is(ol, ul) li > p,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(ol, ul) li > p {
  font-size: 1.125rem;
  line-height: 1.75;
}

.sbdocs-content.sbdocs-content > h1 + p,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h1 + p {
  font-size: 1.375rem;
  margin-block-end: 2em;
}

.sbdocs-content.sbdocs-content > ._ams-status-badge {
  margin-block-end: 1.5rem;
}

.sbdocs-content.sbdocs-content > ._ams-status-badge > span:nth-child(2) {
  color: var(--ams-color-text);
  font-family: "Amsterdam Sans", "Arial", sans-serif;
  font-size: var(--ams-typography-body-text-small-font-size);
}

.sbdocs-content.sbdocs-content .sbdocs-a {
  color: var(--ams-color-interactive);
  text-decoration: underline;
  text-decoration-thickness: 0.0625rem;
  text-underline-offset: 0.125rem;
}

.sbdocs-content.sbdocs-content .sbdocs-a:hover {
  color: var(--ams-color-interactive-hover);
  text-decoration-thickness: 0.125rem;
  text-underline-offset: 0.0625rem;
}

.sbdocs-content.sbdocs-content > :is(h1, h2, h3, h4, h5, h6),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(h1, h2, h3, h4, h5, h6) {
  margin-block: 2em 0.25em;
  padding-block: 0;
}

.sbdocs-content.sbdocs-content > h1,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h1 {
  font-size: 2.5rem;
  margin-block-start: 0;
}

.sbdocs-content.sbdocs-content > h2,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h2 {
  border-block-end: none;
  font-size: 1.5rem;
}

.sbdocs-content.sbdocs-content > h3,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h3 {
  font-size: 1.25rem;
}

.sbdocs-content.sbdocs-content > h4,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h4 {
  font-size: 1.125rem;
}

.sbdocs-content.sbdocs-content > h2 + h3,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h2 + h3,
.sbdocs-content.sbdocs-content > h3 + h4,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h3 + h4,
.sbdocs-content.sbdocs-content > h4 + h5,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > h4 + h5 {
  margin-block-start: 1em;
}

.sbdocs-content.sbdocs-content > :is(p, ol, ul),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > :is(p, ol, ul) {
  margin-block: 0 1rem;
  padding-block: 0;
}

.sbdocs-content.sbdocs-content > table:not(.sb-unstyled) :is(td, th),
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > table:not(.sb-unstyled) :is(td, th) {
  font-size: 1rem;
  line-height: 1.5;
}

.sbdocs-content.sbdocs-content > table:not(.sb-unstyled) th,
.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > table:not(.sb-unstyled) th {
  font-weight: var(--ams-typography-body-text-bold-font-weight);
}

.sbdocs-content.sbdocs-content > p code {
  color: currentColor;
  font-size: 1rem;
}

.sbdocs-content.sbdocs-content > div:not(.sb-unstyled) > figure > figcaption {
  font-size: 0.875rem;
}

:is(#storybook-root, .sbdocs-content) a[href="#"] {
  /* stylelint-disable-next-line declaration-property-value-allowed-list */
  cursor: not-allowed;
}

/* Create positioning context, e.g. for grid background. */
#storybook-root .ams-page,
.sb-story .ams-page {
  position: relative;
}

.sb-story .ams-page {
  min-block-size: initial;
}

/* Remove the grey body background in Compact Mode from the story canvas. */
.ams-body._ams-body--storybook {
  background-color: transparent;
}

/* Override to make sure the default transparent border isn't shown in forced colors mode. */
.innerZoomElementWrapper.innerZoomElementWrapper > div {
  @media (forced-colors: active) {
    border-color: Canvas !important;
  }
}

